--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 # version: '3.8'
 
 services:
-  apache_symfony:
+  apache_camping:
     # nom du service
     build: apache # dossier contenant le Dockerfile
-    container_name: apache_symfony # nom du container
+    container_name: apache_camping # nom du container
     restart: always # redémarrage automatique
     ports:
       # ports exposés
@@ -18,10 +18,10 @@ services:
       - PHP_ERROR_REPORTING=E_ALL # afficher toutes les erreurs
       - PHP_DISPLAY_ERRORS=On # afficher les erreurs
 
-  mariadb_symfony:
+  mariadb_camping:
     # nom du service
     image: mariadb:latest # image à utiliser
-    container_name: mariadb_symfony # nom du container
+    container_name: mariadb_camping # nom du container
     restart: always # redémarrage automatique
     ports:
       # ports exposés
@@ -29,13 +29,13 @@ services:
     environment:
       # variables d'environnement
       - MYSQL_ROOT_PASSWORD=superAdmin # mot de passe root
-      - MYSQL_DATABASE=symfony # nom de la base de données
+      - MYSQL_DATABASE=camping # nom de la base de données
       - MYSQL_USER=admin # nom de l'utilisateur
       - MYSQL_PASSWORD=admin # mot de passe de l'utilisateur
     volumes:
       # volumes montés
-      - ./mysql:/var/lib/mysql
+      - mysql-camping:/var/lib/mysql
       - ./db:/root # envoi le répertoire db dans le container
 
 volumes:
-  mysql:
+  mysql-camping:
