--- a/www/package.json
+++ b/www/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "boostrap": "^2.0.0",
         "bootstrap": "^5.3.3"
     }
 }
